Completed frontend for hangman game 1.

--- a/public/style.css
+++ b/public/style.css
@@ -510,3 +510,9 @@ button {
 #root {
     display: none;
 }
+
+#stage1hangman {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+}
