Second hangman game finished

--- a/public/style.css
+++ b/public/style.css
@@ -511,7 +511,7 @@ button {
     display: none;
 }
 
-#stage1hangman {
+.hangman {
     background-color: white;
     padding: 20px;
     border-radius: 10px;
